--- a/painel/css/animate.css
+++ b/painel/css/animate.css
@@ -1,10 +1,7 @@
 @charset "UTF-8";
 
 /*!
-Animate.css - http://daneden.me/animate
-Licensed under the MIT license - http://opensource.org/licenses/MIT
-
-Copyright (c) 2013 Daniel Eden
+Contrução do sistema
 */
 
 @-webkit-keyframes flipInX {
